Fix minor bug in tippecanoe-update-autocheck.yml
tippecanoe release tags don’t have a `v` prefix.

--- a/.github/workflows/tippecanoe-update-autocheck.yml
+++ b/.github/workflows/tippecanoe-update-autocheck.yml
@@ -25,7 +25,7 @@ jobs:
           echo "New version (raw): $new_version_raw"
 
           new_version=$(git -c 'versionsort.suffix=-' \
-            ls-remote --exit-code --refs --sort='version:refname' --tags https://github.com/felt/tippecanoe/ 'v*.*.*'\
+            ls-remote --exit-code --refs --sort='version:refname' --tags https://github.com/felt/tippecanoe/ '*.*.*'\
             | tail --lines=1\
             | cut --delimiter='/' --fields=3\
             | grep -Po '\d+(\.\d+)+')
