--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,5 @@
-# Copyright 2024 Lawrence Livermore National Security, LLC and other Spack Project Developers. See the top-level COPYRIGHT file for details.
+# Copyright 2024 Lawrence Livermore National Security, LLC
+# See the top-level COPYRIGHT file for details.
 #
 # SPDX-License-Identifier: BSD-3-Clause
 
