Add write permission to workflow for opening PR

--- a/.github/workflows/tippecanoe-update-autocheck.yml
+++ b/.github/workflows/tippecanoe-update-autocheck.yml
@@ -8,6 +8,8 @@ on:
 jobs:
   update-dep:
     runs-on: ubuntu-latest
+    permissions:
+      pull-requests: write
     steps:
       - uses: actions/checkout@v4
       - name: Check and update tippecanoe version
