Give all write permissions for version update job

--- a/.github/workflows/tippecanoe-update-autocheck.yml
+++ b/.github/workflows/tippecanoe-update-autocheck.yml
@@ -8,9 +8,7 @@ on:
 jobs:
   update-dep:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
-      pull-requests: write
+    permissions: write-all
     steps:
       - uses: actions/checkout@v4
       - name: Check and update tippecanoe version
