--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -91,6 +91,7 @@ jobs:
           CIBW_ARCHS: "${{ matrix.arch }}"
           CIBW_ARCHS_MACOS: "x86_64 arm64"
           CIBW_BUILD: "cp312-${{ matrix.build }}*"
+          MACOSX_DEPLOYMENT_TARGET: "10.14"
 
       - uses: actions/upload-artifact@v4
         with:
